# rair

./: .gitignore  Cargo.toml  README.md
examples/: README.md  cargo-project.rair.toml  cargo-workspace.rair.toml  simple-cargo.rair.toml  standalone-auto.rair.toml
src/: lib.rs  main.rs
tests/: integration.rs
