
# Cargo.toml
[package]
name = "rair"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
globset = "0.4"
crossterm = "0.27"
command-group = "2"
cargo_metadata = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"
